--- a/main.html
+++ b/main.html
@@ -10,7 +10,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<article>
+		<p>First paragraph</p>
+		<p>lorem ipsum</p>
+		<p>romee katre</p>
+	</article>
+	<ul>
+		<li>First item</li>
+		<li>Second item</li>
+		<li>Third item</li>
+		<li>Fourth item</li>
+		<li>Fifth item</li>
+	</ul>
 </body>
 
 </html>
